<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarMointor</string>
    <string name="btn_avag_temperature_chart">avag_temperature_chart</string>
    <string name="maintab_oilcost_tip">油耗统计</string>
    <string name="maintab_mileage_tip">里程管理</string>
    <string name="maintab_bill_tip">加油记录</string>
    <string name="maintab_diagnose_tip">一键体验</string>
    <string name="maintab_settings_tip">设置</string>
    
    <string name="bill_item_addtime_tip">日期</string>
    <string name="bill_item_oil_tip">加油量</string>
    <string name="bill_item_cost_tip">支出</string>
    
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="about_description">Just for fun, enjoy it, enjoy Life</string>
    <string name="about_copyright_1">Open Source</string>
    <string name="about_copyright_2">Copyright © 2011~2012 Lynx Studio.</string>
    <string name="about_copyright_3">All Rights Reserved.</string>

</resources>