<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/star_small"
            android:contentDescription="@null" />
    </RelativeLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@drawable/divider_v_gray" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/bill_item_addtime_tip"
            android:textColor="@color/DarkCyan"
            android:textSize="@dimen/font_size_large" />

        <TextView
            android:id="@+id/tv_bill_sub_item_addtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textSize="@dimen/font_size_default" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@drawable/divider_v_gray" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/bill_item_oil_tip"
            android:textColor="@color/DarkCyan"
            android:textSize="@dimen/font_size_large" />

        <TextView
            android:id="@+id/tv_bill_sub_item_oil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textSize="@dimen/font_size_default" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@drawable/divider_v_gray" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/bill_item_cost_tip"
            android:textColor="@color/DarkCyan"
            android:textSize="@dimen/font_size_large" />

        <TextView
            android:id="@+id/tv_bill_sub_item_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textSize="@dimen/font_size_default" />
    </LinearLayout>

</LinearLayout>